// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxBinaryHeapTest Should update heap by index from bottom to top 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 59656,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from middle to bottom 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 49677,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from middle to top 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 46781,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from top to bottom 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 65108,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index should update node account by index 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 27130,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index without changing position 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 29094,
}
`;

exports[`MaxBinaryHeapTest should add new item and rebuild tree 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 89220,
}
`;

exports[`MaxBinaryHeapTest should create max binary heap and remove items in right order 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 149371,
}
`;

exports[`MaxBinaryHeapTest should create max binary heap and remove items in right order 2`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 116461,
}
`;

exports[`MaxBinaryHeapTest should remove item by index 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 41619,
}
`;
